--- a/loop/loop_css/style.css
+++ b/loop/loop_css/style.css
@@ -1,18 +1,18 @@
-body,.btn{
+/* body,.btn{
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-    width: 150px;
+    width: 100px;
     height: 100vh;
     flex-direction: column;
-}
+} */
 a{
     margin: 10px;
     text-decoration: none;
     border: 1px solid #000;
     color: #fff;
-    padding: 13px;
+    padding: 10px;
     background-color: rgb(72, 69, 238);
     width: 100%;
     text-align: center;
