--- a/string/string_css/style.css
+++ b/string/string_css/style.css
@@ -1,27 +1,15 @@
-body,.btn{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
-    width: 150px;
-    height: 100vh;
-    flex-direction: column;
-}
-a{
-    margin: 10px;
-    text-decoration: none;
-    border: 1px solid #000;
-    color: #fff;
-    padding: 13px;
-    background-color: rgb(72, 69, 238);
-    width: 100%;
-    text-align: center;
-    font-family: sans-serif;
-}
-a:hover{
-    background-color: rgb(29, 27, 163);
+body{
+    background-color: rgb(75,74,74) !important;
+    color: antiquewhite !important;
 }
 
+/* ********************************* */
+
+.jumbo-color{
+    background-color: rgb(83, 81, 81);
+}
+
+/* ********************************* */
 
 h1.font-weight-bold{
     font-weight: bold;
@@ -47,15 +35,15 @@ form{
 .flex{
     display: flex;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
 }
 /* ********************************* */
 
 .main_container{
     flex-direction: column;
-    row-gap: 1rem;
+    /* row-gap: 1rem; */
     /* height: 30vh; */
-    width: 30%;
+    width: 40%;
 }
 
 input{
@@ -69,8 +57,10 @@ p{
     font-weight: 700;
     
 }
-
-body{
-    background-color: rgb(75,74,74);
-    color: antiquewhite;
+.vowels{
+    display: flex;
+    justify-content: center;
+    row-gap: 1rem;
+    width: 60%;
+    flex-direction: column;
 }
